# HypeBot

./: .gitignore  Cargo.toml  LICENSE  README.md
migrations/2020-04-22-222856_create_events/: down.sql  up.sql
src/: hypebot_config.rs  main.rs
src/database/: mod.rs  models.rs  schema.rs
src/discord/: events.rs  mod.rs
